# MyFirstOpenGL

./: CMakeLists.txt  main.cpp
shaders/: fragment.glsl
